[tool.poetry]
name = "dropbox-tools"
version = "0.1.0"
description = "Dropbox utilities with offical Dropbox API"
authors = ["lithiumice <fthualinliang@mail.scut.edu.cn>"]
readme = "README.md"
packages = [{include = "dbx"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
tqdm = "^4.66.4"
dropbox = "^12.0.2"

[tool.poetry.scripts]
dbx = "dbx.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
